fix(docs-infra): add spacing between `Alias` and `Value` (#63211)
Prior to this change there was noi spacing between the Alias and Value

PR Close #63211

--- a/adev/shared-docs/styles/_reference.scss
+++ b/adev/shared-docs/styles/_reference.scss
@@ -373,6 +373,12 @@
 
     // "CLI member card"-specific styles
     .docs-reference-member-card {
+      .docs-reference-option-aliases {
+        span {
+          padding-right: 0.4rem;
+        }
+      }
+
       .docs-ref-content {
         padding: 1rem 0;
 
